--- a/css/Navigation.module.css
+++ b/css/Navigation.module.css
@@ -6,6 +6,12 @@
   background: rgba(56, 19, 150, 0.65);
   padding: 1rem 3rem;
 }
+.nav-container__logo-box {
+  display: flex;
+}
+.nav-container__logo-box__button {
+  display: none;
+}
 .nav-container__navigation {
   margin-right: 100px;
 }
@@ -24,80 +30,110 @@
   display: inline-flex;
   gap: 1rem;
 }
-.nav-container__navigation__button {
-  display: none;
+.nav-container__navigation__login-register-container__user-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 108px;
+  right: 0px;
+  width: 300px;
+  background: #7d65bb;
+  border-bottom-left-radius: 15px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+}
+.nav-container__navigation__login-register-container__user-container__header-container {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+  padding: 1rem 2rem;
+  border-bottom: 1px solid rgba(22, 59, 64, 0.7019607843);
+}
+.nav-container__navigation__login-register-container__user-container__header-container__right {
+  display: flex;
+  flex-direction: column;
+}
+.nav-container__navigation__login-register-container__user-container ul {
+  font-weight: 500;
+  list-style-type: none;
+}
+.nav-container__navigation__login-register-container__user-container ul li {
+  padding: 0.5rem 0;
+  background-image: linear-gradient(white, white);
+  background-size: 0 100%;
+  background-repeat: no-repeat;
+  transition: 0.4s;
+  padding: 1rem 2rem;
+}
+.nav-container__navigation__login-register-container__user-container ul li:last-child {
+  border-bottom-left-radius: 15px;
+}
+.nav-container__navigation__login-register-container__user-container ul li:hover {
+  color: #7d65bb;
+  background-size: 100% 100%;
+  cursor: pointer;
 }
 .nav-container__dropdown-menu--shown {
+  border-bottom-right-radius: 15px;
   display: none;
   opacity: 0;
 }
 
-@keyframes dropdown {
-  from {
-    width: 0;
-  }
-  to {
-    width: 200px;
-  }
-}
-@keyframes dropdown-mobile {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100vw;
-  }
-}
 @media only screen and (max-width: 1540px) {
   .nav-container {
     position: relative;
+  }
+  .nav-container__logo-box__button {
+    background-color: transparent;
+    border: none;
+    display: block;
+  }
+  .nav-container__logo-box__button-hamburger-icon {
+    width: 30px;
+    height: 30px;
+    fill: white;
+  }
+  .nav-container__logo-box__button:hover {
+    cursor: pointer;
   }
   .nav-container__navigation__pages {
     display: none;
   }
   .nav-container__navigation__login-register-container {
-    display: none;
-  }
-  .nav-container__navigation__button {
-    background-color: transparent;
-    border: none;
     display: block;
   }
-  .nav-container__navigation__button-hamburger-icon {
-    width: 30px;
-    height: 30px;
-  }
-  .nav-container__navigation__button:hover {
-    cursor: pointer;
+  .nav-container__navigation__login-register-container__user-container {
+    top: 93px;
   }
   .nav-container__dropdown-menu--shown {
     opacity: 1;
-    animation: dropdown 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 0px;
-    right: 0px;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.5);
+    top: 93px;
+    left: 0;
   }
   .nav-container__dropdown-menu--shown__pages {
     display: block;
     list-style-type: none;
   }
   .nav-container__dropdown-menu--shown__pages li {
-    padding: 0.5rem 1.7rem 0.5rem 6rem;
-    text-align: right;
-    background: #239bd0;
-    background-image: linear-gradient(rgba(9, 200, 226, 0.7), rgba(16, 105, 116, 0.7));
+    padding: 0.5rem 8.7rem 0.5rem 3rem;
+    text-align: left;
+    background: #7d65bb;
+    background-image: linear-gradient(white, white);
     background-size: 0 100%;
     background-repeat: no-repeat;
     transition: 0.4s;
   }
+  .nav-container__dropdown-menu--shown__pages li:last-child {
+    border-bottom-right-radius: 15px;
+  }
   .nav-container__dropdown-menu--shown__pages li:hover {
+    color: #7d65bb;
     background-size: 100% 100%;
     cursor: pointer;
-  }
-  .nav-container__dropdown-menu--shown__login-register-container {
-    display: block;
   }
   .nav-container__button {
     background-color: transparent;
@@ -114,20 +150,28 @@
 }
 @media only screen and (max-width: 650px) {
   .nav-container {
-    justify-content: center;
+    justify-content: space-between;
+    padding: 1rem;
   }
   .nav-container__navigation__button {
     position: absolute;
     top: 30px;
-    right: 30px;
+    left: 30px;
     z-index: 0;
   }
+  .nav-container__navigation__login-register-container button {
+    width: 40px !important;
+    height: 40px !important;
+  }
   .nav-container__dropdown-menu--shown {
-    animation: dropdown-mobile 0.3s ease-in-out;
     width: 100vw;
     z-index: 1;
   }
   .nav-container__dropdown-menu--shown__pages {
     background: #239bd0;
+  }
+  .nav-container__dropdown-menu--shown__pages li {
+    text-align: left;
+    padding-left: 1rem;
   }
 }/*# sourceMappingURL=Navigation.module.css.map */
