--- a/src/components/authentication/authentication.module.scss
+++ b/src/components/authentication/authentication.module.scss
@@ -52,6 +52,20 @@
         font-size: 1rem;
         color: white;
       }
+      &__input-box {
+        position: relative;
+        svg {
+          position: absolute;
+          top: 17px;
+          right: 20px;
+          height: 20px;
+          width: 20px;
+          fill: white;
+        }
+        svg:hover {
+          cursor: pointer;
+        }
+      }
     }
   }
 }
