--- a/css/authentication.module.css
+++ b/css/authentication.module.css
@@ -55,6 +55,20 @@
   font-size: 1rem;
   color: white;
 }
+.authentication-container__right-box__form__input-box {
+  position: relative;
+}
+.authentication-container__right-box__form__input-box svg {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+  height: 20px;
+  width: 20px;
+  fill: white;
+}
+.authentication-container__right-box__form__input-box svg:hover {
+  cursor: pointer;
+}
 
 @media only screen and (max-width: 1300px) {
   .authentication-container__left-box__logo,
