--- a/src/components/forum/forum.module.scss
+++ b/src/components/forum/forum.module.scss
@@ -6,3 +6,9 @@
   padding: 10vh 15vw;
   gap: 5vh;
 }
+
+@media only screen and (max-width: 965px) {
+  .forum-container {
+    padding: 5vh 5vw;
+  }
+}
