--- a/src/components/nav/Navigation.module.scss
+++ b/src/components/nav/Navigation.module.scss
@@ -161,6 +161,7 @@
     justify-content: space-between;
     padding: 1rem;
     &__navigation {
+      margin: 0;
       &__button {
         position: absolute;
         top: 30px;
