--- a/css/topicbox.module.css
+++ b/css/topicbox.module.css
@@ -1,17 +1,21 @@
 .topic-container {
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  padding: 10vh 15vw;
-  gap: 3rem;
+  flex-direction: row;
+  background-color: #7d65bb;
+  border-radius: 15px;
+  padding: 2rem 1rem;
 }
-.topic-container__comments-section {
+.topic-container__user-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  width: 15%;
+  gap: 1rem;
+  justify-content: flex-start;
 }
-.topic-container__comments-section div[aria-label=comment-container]:nth-child(even) span {
-  background-color: #a947f6;
-}/*# sourceMappingURL=topic.module.css.map */: flex;
+.topic-container__user-container__icon-box {
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: #2baad7;
@@ -50,7 +54,6 @@
 }
 .topic-container__question-box__question {
   font-size: 1.5rem;
-  word-break: break-all;
 }
 .topic-container__answers-container {
   box-sizing: border-box;
@@ -185,4 +188,4 @@
   .topic-container__answers-container__answers-box__icons-box__icon:nth-of-type(3) {
     left: 60px;
   }
-}/*# sourceMappingURL=topic.module.css.map */
+}/*# sourceMappingURL=topicBox.module.css.map */
