--- a/css/topic.module.css
+++ b/css/topic.module.css
@@ -1,17 +1,24 @@
 .topic-container {
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  padding: 10vh 15vw;
-  gap: 3rem;
+  flex-direction: row;
+  background-color: #7d65bb;
+  border-radius: 15px;
+  padding: 2rem 1rem;
 }
-.topic-container__comments-section {
+.topic-container :hover {
+  cursor: pointer;
+}
+.topic-container__user-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  width: 15%;
+  gap: 1rem;
+  justify-content: flex-start;
 }
-.topic-container__comments-section div[aria-label=comment-container]:nth-child(even) span {
-  background-color: #a947f6;
-}/*# sourceMappingURL=topic.module.css.map */: flex;
+.topic-container__user-container__icon-box {
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: #2baad7;
@@ -50,7 +57,7 @@
 }
 .topic-container__question-box__question {
   font-size: 1.5rem;
-  word-break: break-all;
+  word-break: break-word;
 }
 .topic-container__answers-container {
   box-sizing: border-box;
@@ -64,6 +71,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 160px;
 }
 .topic-container__answers-container__answers-box__icons-box {
   position: relative;
