--- a/src/components/forum/topic.module.scss
+++ b/src/components/forum/topic.module.scss
@@ -5,6 +5,9 @@
   background-color: #7d65bb;
   border-radius: 15px;
   padding: 2rem 1rem;
+  :hover {
+    cursor: pointer;
+  }
   &__user-container {
     display: flex;
     flex-direction: row;
@@ -53,7 +56,7 @@
     width: 60%;
     &__question {
       font-size: 1.5rem;
-      word-break: break-all;
+      word-break: break-word;
     }
   }
   &__answers-container {
@@ -67,6 +70,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      width: 160px;
       &__icons-box {
         position: relative;
         display: inline-flex;
