--- a/src/components/forum/topic/comment.module.scss
+++ b/src/components/forum/topic/comment.module.scss
@@ -46,3 +46,13 @@
     gap: 1rem;
   }
 }
+@media only screen and (max-width: 550px) {
+  .comment-container__comment-box__username {
+    width: 30px;
+    height: 30px;
+    svg {
+      width: 15px;
+      height: 15px;
+    }
+  }
+}
