--- a/css/layout.module.css
+++ b/css/layout.module.css
@@ -6,4 +6,21 @@
   width: 100%;
   height: auto;
   min-height: 100vh;
+}
+
+h1 {
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+@media only screen and (max-width: 500px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.2rem;
+  }
 }/*# sourceMappingURL=layout.module.css.map */
