--- a/src/components/quiz/quizType/quizScore.module.scss
+++ b/src/components/quiz/quizType/quizScore.module.scss
@@ -29,6 +29,7 @@
         border-radius: 15px;
         padding: 0.5rem 1rem;
         height: 40px;
+        align-items: center;
         justify-content: space-between;
         img {
           height: 20px;
@@ -41,5 +42,45 @@
     flex-direction: row;
     justify-content: center;
     gap: 2rem;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .score-container {
+    width: 400px;
+    &__buttons-container {
+      flex-direction: column;
+      button {
+        font-size: 1rem;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 450px) {
+  .score-container {
+    width: 100%;
+    border: none;
+    box-shadow: none;
+    height: 80vh;
+    &__context-container {
+      gap: 1.5rem;
+      &__answers-container {
+        &__answer-box {
+          height: 30px;
+          padding: 0.3rem 1rem;
+          font-size: 0.8rem;
+          img {
+            height: 15px;
+            width: 15px;
+          }
+        }
+      }
+    }
+    &__buttons-container {
+      flex-direction: column;
+
+      button {
+        font-size: 1rem;
+      }
+    }
   }
 }
