--- a/src/components/quiz/quizType/quizView.module.scss
+++ b/src/components/quiz/quizType/quizView.module.scss
@@ -3,7 +3,6 @@
   box-sizing: border-box;
   flex-direction: column;
   align-items: center;
-
   gap: 5rem;
   &__quiz-view-box {
     display: flex;
@@ -60,9 +59,106 @@
     color: #ffcc00;
   }
   &__timer-box {
+    display: flex;
+    justify-content: flex-start;
     width: 600px;
     height: 20px;
     background-color: rgba(255, 255, 255, 0.39);
     border-radius: 20px;
+    &__fill {
+      background-color: gold;
+      height: 100%;
+      border-radius: 20px;
+    }
+  }
+}
+@media only screen and (max-width: 970px) {
+  h1 {
+    font-size: 2rem;
+    box-sizing: border-box;
+    text-align: center;
+    padding: 1rem 2rem;
+  }
+  .quiz-view-container {
+    gap: 3rem;
+    &__quiz-view-box {
+      width: 400px;
+      align-items: center;
+      gap: 1rem;
+      &__img-flags-box {
+        height: 100px;
+        width: 180px;
+        img {
+          height: 100px;
+          width: 180px;
+        }
+      }
+      &__img-emblems-box {
+        height: 130px;
+        width: 130px;
+        img {
+          width: 130px;
+          height: 130px;
+        }
+      }
+      &__img-plates-box {
+        height: 100px;
+        width: 240px;
+        img {
+          height: 100px;
+          width: 240px;
+        }
+      }
+    }
+
+    &__timer-box {
+      width: 400px;
+    }
+  }
+}
+@media only screen and (max-width: 450px) {
+  h1 {
+    box-sizing: border-box;
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 0rem 2rem;
+  }
+  .quiz-view-container {
+    gap: 2rem;
+    &__quiz-view-box {
+      width: 320px;
+      &__img-flags-box {
+        height: 75px;
+        width: 135px;
+        img {
+          height: 75px;
+          width: 135px;
+        }
+      }
+      &__img-emblems-box {
+        height: 110px;
+        width: 110px;
+        img {
+          width: 110px;
+          height: 110px;
+        }
+      }
+      &__img-plates-box {
+        height: 60px;
+        width: 200px;
+        img {
+          height: 60px;
+          width: 200px;
+        }
+      }
+    }
+    &__timer {
+      font-size: 2rem;
+      color: #ffcc00;
+    }
+    &__timer-box {
+      height: 10px;
+      width: 300px;
+    }
   }
 }
