--- a/css/Navigation.module.css
+++ b/css/Navigation.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background: rgba(56, 19, 150, 0.65);
+  background-color: rgba(113, 49, 183, 0.9019607843);
   padding: 1rem 3rem;
 }
 .nav-container__logo-box {
