--- a/css/footer.module.css
+++ b/css/footer.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  background: rgba(56, 19, 150, 0.65);
+  background: rgba(113, 49, 183, 0.9019607843);
   box-sizing: border-box;
   padding: 10px 60px;
   gap: 5vw;
