--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  background: rgba(56, 19, 150, 0.65);
+  background: #7131b7e6;
   box-sizing: border-box;
   padding: 10px 60px;
   gap: 5vw;
