--- a/src/components/nav/Navigation.module.scss
+++ b/src/components/nav/Navigation.module.scss
@@ -3,7 +3,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background: rgba(56, 19, 150, 0.65);
+  background-color: #7131b7e6;
+  // background: rgba(56, 19, 150, 0.65);
   padding: 1rem 3rem;
   &__logo-box {
     display: flex;
