--- a/src/styles/globals/layout.module.scss
+++ b/src/styles/globals/layout.module.scss
@@ -1,15 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&family=Radley&family=Roboto:wght@700&display=swap");
 .layout {
   box-sizing: border-box;
-  background: rgb(64, 36, 134);
-  background: linear-gradient(
-    167deg,
-    rgba(56, 19, 150, 0.81) 0%,
-    rgba(82, 18, 147, 0.89) 21.97%,
-    rgba(112, 24, 166, 0.94) 41.48%,
-    rgba(106, 33, 178, 0.94) 59.51%,
-    rgba(85, 52, 168, 0.89) 97.32%
-  );
+  background-color: #7131b7;
+  // background: rgb(64, 36, 134);
+  // background: linear-gradient(
+  //   167deg,
+  //   rgba(56, 19, 150, 0.81) 0%,
+  //   rgba(82, 18, 147, 0.89) 21.97%,
+  //   rgba(112, 24, 166, 0.94) 41.48%,
+  //   rgba(106, 33, 178, 0.94) 59.51%,
+  //   rgba(85, 52, 168, 0.89) 97.32%
+  // );
   // linear-gradient(
   //   174deg,
   //   rgba(64, 36, 134, 1) 40%,
