--- a/src/components/nav/Navigation.module.scss
+++ b/src/components/nav/Navigation.module.scss
@@ -37,10 +37,10 @@
         top: 108px;
         right: 0px;
         width: 300px;
-        background: #7d65bb;
+        background: #7131b7e6;
         border-bottom-left-radius: 15px;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
-
+        z-index: 100;
         &__header-container {
           display: flex;
           flex-direction: row;
