--- a/src/components/profile/personal.module.scss
+++ b/src/components/profile/personal.module.scss
@@ -1,3 +1,11 @@
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .personal-container {
   box-sizing: border-box;
   display: flex;
@@ -35,6 +43,7 @@
     padding: 2rem;
     align-items: center;
     gap: 1rem;
+
     &__user-icon {
       display: flex;
       align-items: center;
@@ -48,12 +57,29 @@
     &__user-email {
       font-size: 1.2rem;
     }
+    &__loader {
+      border: 16px solid #f3f3f3; /* Light grey */
+      border-top: 16px solid #5acbe5; /* Blue */
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+      animation: spin 2s linear infinite;
+      margin: auto 0;
+    }
+    &__check {
+      margin: auto 0;
+      width: 200px;
+      height: 200px;
+    }
     &__form-box {
       display: flex;
       flex-direction: column;
       box-sizing: border-box;
       gap: 1rem;
       width: 100%;
+      &__warning {
+        color: #ff2f2f;
+      }
       input {
         box-sizing: border-box;
         border: none;
