--- a/src/components/profile/password.module.scss
+++ b/src/components/profile/password.module.scss
@@ -10,12 +10,13 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  width: 500px;
-  height: auto;
+  width: 400px;
+  height: 500px;
   gap: 0.5rem;
   &__header-box {
     display: flex;
     flex-direction: row;
+    width: 100%;
     gap: 0.5rem;
     align-items: center;
     &__logo-box {
@@ -36,6 +37,7 @@
   &__personal-box {
     box-sizing: border-box;
     display: flex;
+    width: 100%;
     flex-direction: column;
     background-color: #7b41bb;
     border-radius: 25px;
@@ -82,5 +84,10 @@
       //     margin: 0 auto;
       //   }
     }
+  }
+}
+@media only screen and (max-width: 500px) {
+  .password-container {
+    width: 300px;
   }
 }
