--- a/css/Navigation.module.css
+++ b/css/Navigation.module.css
@@ -37,9 +37,10 @@
   top: 108px;
   right: 0px;
   width: 300px;
-  background: #7d65bb;
+  background: rgba(113, 49, 183, 0.9019607843);
   border-bottom-left-radius: 15px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+  z-index: 100;
 }
 .nav-container__navigation__login-register-container__user-container__header-container {
   display: flex;
