--- a/css/password.module.css
+++ b/css/password.module.css
@@ -1,14 +1,23 @@
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .password-container {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  width: 500px;
-  height: auto;
+  width: 400px;
+  height: 500px;
   gap: 0.5rem;
 }
 .password-container__header-box {
   display: flex;
   flex-direction: row;
+  width: 100%;
   gap: 0.5rem;
   align-items: center;
 }
@@ -29,6 +38,7 @@
 .password-container__personal-box {
   box-sizing: border-box;
   display: flex;
+  width: 100%;
   flex-direction: column;
   background-color: #7b41bb;
   border-radius: 25px;
@@ -37,12 +47,29 @@
   height: 450px;
   gap: 1rem;
 }
+.password-container__personal-box__loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #5acbe5; /* Blue */
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  animation: spin 2s linear infinite;
+  margin: auto 0;
+}
+.password-container__personal-box__check {
+  margin: auto 0;
+  width: 200px;
+  height: 200px;
+}
 .password-container__personal-box__form-box {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   gap: 1rem;
   width: 100%;
+}
+.password-container__personal-box__form-box__warning {
+  color: #ff2f2f;
 }
 .password-container__personal-box__form-box input {
   box-sizing: border-box;
@@ -54,4 +81,10 @@
   padding: 1rem;
   font-size: 1rem;
   color: white;
+}
+
+@media only screen and (max-width: 500px) {
+  .password-container {
+    width: 300px;
+  }
 }/*# sourceMappingURL=password.module.css.map */
