--- a/css/personal.module.css
+++ b/css/personal.module.css
@@ -1,8 +1,16 @@
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .personal-container {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  width: 500px;
+  width: 400px;
   height: auto;
   gap: 0.5rem;
 }
@@ -11,6 +19,7 @@
   flex-direction: row;
   gap: 0.5rem;
   align-items: center;
+  width: 100%;
 }
 .personal-container__header-box__logo-box {
   display: flex;
@@ -32,6 +41,7 @@
   flex-direction: column;
   background-color: #7b41bb;
   height: 450px;
+  width: 100%;
   border-radius: 25px;
   padding: 2rem;
   align-items: center;
@@ -50,12 +60,29 @@
 .personal-container__personal-box__user-email {
   font-size: 1.2rem;
 }
+.personal-container__personal-box__loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #5acbe5; /* Blue */
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  animation: spin 2s linear infinite;
+  margin: auto 0;
+}
+.personal-container__personal-box__check {
+  margin: auto 0;
+  width: 200px;
+  height: 200px;
+}
 .personal-container__personal-box__form-box {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   gap: 1rem;
   width: 100%;
+}
+.personal-container__personal-box__form-box__warning {
+  color: #ff2f2f;
 }
 .personal-container__personal-box__form-box input {
   box-sizing: border-box;
@@ -67,4 +94,10 @@
   padding: 1rem;
   font-size: 1rem;
   color: white;
+}
+
+@media only screen and (max-width: 500px) {
+  .personal-container {
+    width: 300px;
+  }
 }/*# sourceMappingURL=personal.module.css.map */
