--- a/css/profile.module.css
+++ b/css/profile.module.css
@@ -5,11 +5,29 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  gap: 10rem;
+  justify-content: space-between;
 }
 .profile-container__personal-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+@media only screen and (max-width: 1500px) {
+  .profile-container {
+    gap: 2rem;
+    height: auto;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .profile-container {
+    gap: 2rem;
+    height: auto;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }/*# sourceMappingURL=profile.module.css.map */
