--- a/css/quizachievement.module.css
+++ b/css/quizachievement.module.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  max-width: 420px;
   width: 100%;
   gap: 1rem;
 }
@@ -34,6 +35,7 @@
   border-radius: 10px;
   padding: 1rem;
   justify-content: space-between;
+  gap: 1rem;
 }
 .achievement-container__achievement-box__item-box {
   box-sizing: border-box;
@@ -59,4 +61,10 @@
 .achievement-container__achievement-box__item-box__img-box img {
   width: 18px;
   height: 18px;
-}/*# sourceMappingURL=quizachievement.module.css.map */
+}
+
+@media only screen and (max-width: 500px) {
+  .achievement-container__achievement-box {
+    flex-direction: column;
+  }
+}/*# sourceMappingURL=quizAchievement.module.css.map */
