--- a/src/components/profile/personal.module.scss
+++ b/src/components/profile/personal.module.scss
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  width: 500px;
+  width: 400px;
   height: auto;
   gap: 0.5rem;
   &__header-box {
@@ -18,6 +18,7 @@
     flex-direction: row;
     gap: 0.5rem;
     align-items: center;
+    width: 100%;
     &__logo-box {
       display: flex;
       align-items: center;
@@ -39,6 +40,7 @@
     flex-direction: column;
     background-color: #7b41bb;
     height: 450px;
+    width: 100%;
     border-radius: 25px;
     padding: 2rem;
     align-items: center;
@@ -96,5 +98,10 @@
       //     margin: 0 auto;
       //   }
     }
+  }
+}
+@media only screen and (max-width: 500px) {
+  .personal-container {
+    width: 300px;
   }
 }
