--- a/src/components/profile/quizAchievement.module.scss
+++ b/src/components/profile/quizAchievement.module.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  max-width: 420px;
   width: 100%;
   gap: 1rem;
   &__header-box {
@@ -33,6 +34,7 @@
     border-radius: 10px;
     padding: 1rem;
     justify-content: space-between;
+    gap: 1rem;
 
     &__item-box {
       box-sizing: border-box;
@@ -58,6 +60,13 @@
           height: 18px;
         }
       }
+    }
+  }
+}
+@media only screen and (max-width: 500px) {
+  .achievement-container {
+    &__achievement-box {
+      flex-direction: column;
     }
   }
 }
