--- a/css/footer.module.css
+++ b/css/footer.module.css
@@ -11,11 +11,24 @@
 }
 .footer__contact {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.footer__contact__icons-box {
+  display: flex;
   flex-direction: row;
   gap: 1rem;
 }
-.footer__contact-icon {
-  width: 40px;
+.footer__contact__icons-box__icon {
+  width: 30px;
+}
+.footer__contact__privacy {
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  color: rgba(201, 176, 228, 0.9019607843);
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 1280px) {
