--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -10,10 +10,23 @@
   gap: 5vw;
   &__contact {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 1rem;
-    &-icon {
-      width: 40px;
+    &__icons-box {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      &__icon {
+        width: 30px;
+      }
+    }
+    &__privacy {
+      text-align: right;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 500;
+      font-size: 14px;
+      color: #c9b0e4e6;
+      text-decoration: none;
     }
   }
 }
